[ios] Use the NTP's HeaderViewController traitCollection.

CSHVC isn't a typical child view controller because it's loaded inside a
UICollectionView header.  Perhaps due to this, in some situations the CSHVC.view
traitCollections appear to be UIUserInterfaceSizeClassUnspecified.  Instead
use CSHVC directly.

Bug: 869262
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: Ide7b1ecea10f056ef83004055122a91e08fd2fd9
Reviewed-on: https://chromium-review.googlesource.com/1196966
Commit-Queue: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588018}
Former-commit-id: 135ca470f325795782d8fce531716d93399ba9e8